[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UI/NumberNew.png" type="Texture" id=1]
[ext_resource path="res://src/Effect/MoneyNumber.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/MoneyIcon.png" type="Texture" id=3]

[node name="MoneyNumber" type="Node2D"]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( -8, 0 )
texture = ExtResource( 3 )

[node name="Num1" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11
vframes = 4
frame = 9

[node name="Num2" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 1 )
hframes = 11
vframes = 4
frame = 9

[node name="Num3" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )
hframes = 11
vframes = 4
frame = 9
